# intel-msr-temptool

./: Cargo.toml  LICENSE  README.md
src/: main.rs  msr.rs  temp.rs
