[package]
name = "intel-msr-temptool"
version = "0.1.0"
edition = "2021"
authors = ["Toni Peltonen <peltzi@peltzi.fi>"]
description = "Tool to read and modify Intel CPU temperature related model-specific registers (MSR)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3", features = ["derive"] }